details.xml update - now renders for small screens. Remove default MainActivity.kt & activity_main.xml files.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,10 @@
     <string name="heal">Heal</string>
     <string name="life">Life</string>
     <string name="choose_a_hero">Choose a Hero</string>
-    <string name="dragon_ballz_fight">Dragon Ballz Fight!</string>
     <string name="life_readout">Life 100%</string>
     <string name="herofightimage">HeroFightImage</string>
     <string name="damagetint">DamageTint</string>
     <string name="ouch">Ouch!</string>
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
+    <string name="favorite">Favorite</string>
 </resources>
